More updates for the README.

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This is a basic viewer for images in Flickr. Currently it only views my files, I will change that soon.
 
 A note about the Flickr keys, add your own keys to the InitParams in the *.nokeys.* files and rename them removing the '.noKeys' from the filenames to get the app to work.
- 
+
+It is written for SilverLight 4 using Visual Studio 2010.
